2003-04-14  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/autofs/autofs_solaris_v2_v3.c: removed autofs_free_data(),
	left over from the recent cleanup

2003-04-13  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* doc/Makefile.am (DVIPS): use proper options for dvips.

	* doc/am-utils.texi (opts Option): document new 'unmount' option,
	and better explain the 'nounmount' option.  Also some misc options
	for better generation of html manual.

	* doc/Makefile.am (install-html): support newer text2html 4.0
	options, as older options were renamed or changed behavior.

	* amd/autil.c (am_mounted): support new 'unmount' option, to allow
	all file system mounts to timeout and thus expire.  This option is
	useful for removable local media such as CD-ROMs, USB drives,
	etc. so they can expire when not in use, and get unmounted (such
	drives can get work out when they keep spinning).  Patch from
	Christos Zoulas <christos@zoulas.com> (originally from Koji
	Imada).

2003-04-10  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* configure.in: use AM_MAINTAINER_MODE, so maintainer-only rules
	do not get added to Makefiles by default (they are confusing to
	users who don't have autotools installed).

2003-04-09  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/mntfs.c (find_mntfs): revert the "change of philosophy" (see
	the 2001-05-23 entry) back to the 6.0 code

2003-04-04  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* libamu/xutil.c (switch_to_logfile): don't try to print logfile
	if it is null (strlen core dump on solaris).  Bug report from John
	P. Rouillard <rouilj@ieee.org>.

2003-03-31  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* fsinfo/fsinfo.8: typo co-ordinate -> coordinate.  Typo report
	from Perry E. Metzger" <perry@piermont.com>.

2003-03-25  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* include/am_defs.h: Don't include malloc.h if stdlib.h exists,
	because modern systems (e.g., BSD) complain if you use malloc.h